# Morphosis

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: Info.plist.in
scripts/: install-windows.cmd  install-windows.ps1
source/: MorphosisSpray.cpp  MorphosisSpray.h
